# poptimizer

./: README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  setup.cfg
database/: Dockerfile
dump/data_new/: raw_div.bson
poptimizer/: __main__.py
poptimizer/adapters/: __init__.py  data.py  market_data.py  portfolio.py
poptimizer/app/: actor.py  backup.py  clients.py  config.py  lgr.py  modules.py  telegram.py
poptimizer/core/: actor.py  backup.py  clients.py  config.py  domain.py  exceptions.py  http.py  lgr.py  repository.py  telegram.py
poptimizer/data/: actor.py  updater.py
poptimizer/data/edit/: dividends.py
poptimizer/data/update/: cpi.py  divs.py  indexes.py  quotes.py  securities.py  trading_date.py  usd.py
poptimizer/data/update/raw/: check_raw.py  nasdaq.py  reestry.py  status.py
poptimizer/dl/: run.py  trainer.py
poptimizer/dl/tests/: test_data_loader.py  test_data_loader.py_
poptimizer/portfolio/: actor.py  entity.py  updater.py
poptimizer/portfolio/edit/: accounts.py  portfolio.py  selected.py
poptimizer/portfolio/update/: portfolio.py
poptimizer/server/: logger.py  middleware.py  server.py  views.py
poptimizer/utils/: retry.py  signals.py
server/: .dockerignore  Dockerfile  requirements.txt
server/src/config/: config.template  config.yaml
server/src/dump/source/: dividends.metadata.json
server/src/poptimizer/: __main__.py  config.py
server/src/poptimizer/data/adapters/: odm.py
server/src/poptimizer/dl/: data_loader.py
server/src/poptimizer/dl/features/: high.py
server/src/poptimizer/portfolio/: portfolio.py
server/src/poptimizer/shared/: connections.py
server/src/portfolio/: base.yaml
