[project]
name = "poptimizer"
version = "3.0.0a"
description = "Portfolio optimization"
authors = [
    {name = "WLMike", email = "wlmike@gmail.com"},
]
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=1.12.0",
    "motor>=3.1.1",
    "aiomoex>=2.0.0",
    "openpyxl>=3.0.10",
    "pydantic>=1.10.2",
    "uvloop>=0.17.0",
    "aiofiles>=22.1.0",
    "types-aiofiles>=22.1.0.4",
    "lxml>=4.9.1",
    "pandas>=1.5.2",
    "tqdm>=4.64.1",
    "scipy>=1.9.3",
]
[project.optional-dependencies]

[project.urls]
repository = "https://github.com/WLM1ke/poptimizer"

[project.scripts]
poptimizer="poptimizer.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black[d]>=22.10.0",
    "import-linter>=1.4.0",
    "ruff>=0.0.261",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "numpy.typing.mypy_plugin",
]

strict = true
ignore_missing_imports = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --cov-report=xml --setup-show --verbose"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*/tests/*"]

[tool.black]
line-length = 120

[tool.ruff]
#line-length = 120
select = ["ALL"]
ignore = [
    "A003",  # Class attribute `open` is shadowing a python builtin
    "ANN101",  # Missing-type-self
    "ANN102",  # Missing-type-cls
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D107",  # Missing docstring in __init__ - prefer doc for class
    "D211", # One-blank-line-before-class (D203) and no-blank-line-before-class (D211) are incompatible
    "D213",  # Multi-line-summary-first-line (D212) and multi-line-summary-second-line (D213) are incompatible
    "DTZ",  # The use of `datetime` without `tzinfo` argument is not allowed - one tz zone
    "E501",  # Line too long - black
    "EM",  # Don't like many exception classes
    "N805",  # First argument of a method should be named self - conflict with pydantic validator
    "RUF001", # Ambiguous-unicode-character-string - russian
    "RUF002", # Ambiguous-unicode-character-docstring - russian
    "RUF003", # Ambiguous-unicode-character-comment - russian
    "TRY003", # Avoid specifying long messages outside the exception class - don't like many exception classes
]
fixable = ["ALL"]
target-version = "py311"

[tool.importlinter]
root_package = "poptimizer"

[[tool.importlinter.contracts]]
name = "Layered"
type = "layers"
layers = [
    "poptimizer.app",
    "poptimizer.server",
    "poptimizer.portfolio",
    "poptimizer.data",
    "poptimizer.adapters",
    "poptimizer.core",
]
ignore_imports = [
    "poptimizer.adapters.portfolio -> poptimizer.portfolio.actor",
]

[[tool.importlinter.contracts]]
name = "Weakly coupled middle layer"
type = "independence"
modules = [
    "poptimizer.server",
    "poptimizer.portfolio",
    "poptimizer.data",
]
ignore_imports = [
    "poptimizer.data.update.raw.status -> poptimizer.adapters.*",
]
